Fixed missing alt tag

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
@@ -217,19 +217,19 @@ of <a href="../reference/api/org/eclipse/jdt/core/IPackageFragment.html"><b>
 </b> interface, since they must be opened before they can be navigated. 
 The  figure below shows how these elements are represented in the Packages
   view.</p>
-<p><img border="0" src="images/openables.gif">
+<p><img border="0" src="images/openables.gif" alt="">
 </p>
 <p>The Java elements that implement <b><a href="../reference/api/org/eclipse/jdt/core/IOpenable.html">
         IOpenable</a>
 </b> are mainly created from information found in the underlying resource
     files.&nbsp; The same elements are represented generically in the resource
     navigator view.</p>
-<p><img border="0" src="images/javanavigator.gif">
+<p><img border="0" src="images/javanavigator.gif" alt="">
 </p>
 <p> Other elements correspond to the items that make up a Java compilation 
    unit. The figure below shows a Java compilation unit  and a content outliner
   that displays the source elements in the compilation  unit.</p>
-<img border="0" src="images/sourceelements.gif">
+<img border="0" src="images/sourceelements.gif" alt="">
 <p> These elements implement the <a href="../reference/api/org/eclipse/jdt/core/ISourceReference.html"><b>
         ISourceReference</b></a>
         interface, since they contain corresponding source code. (As these
