--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 <p>
-<div CLASS="Figure"><img SRC="../images/tasks-27.gif" height=303 width=376>
+<div CLASS="Figure"><img SRC="../images/tasks-27.gif" height=303 width=376 alt=" ">
 <p>
 <div CLASS="FigureTitle">Extract Method Parameters Page</div>
 </div>
