--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-91.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-91.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 <p>
-<div CLASS="Figure"><img SRC="../images/tasks-28.gif" NOSAVE height=322 width=353>
+<div CLASS="Figure"><img SRC="../images/tasks-28.gif" NOSAVE height=322 width=353 alt=" ">
 <p>
 <div CLASS="FigureTitle">Rename Package Parameters Page</div>
 </div>
