--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
@@ -12,7 +12,7 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="../images/tasks-31.gif" NOSAVE height=256 width=344>
+<div CLASS="Figure"><img SRC="../images/tasks-31.gif" NOSAVE height=256 width=344 alt=" ">
 <div CLASS="FigureTitle">Parameters Page for the Rename Method Refactoring
 Command</div>
 </div>
