--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -31,8 +31,8 @@ Build classpath</a>
     </p>
 
     <p>
-      <a href="../reference/ref-15.htm"">Classpath Variables preferences</a><br />
-      <a href="../reference/ref-123.htm"">Java Build Path properties</a><br />
+      <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br />
+      <a href="../reference/ref-123.htm">Java Build Path properties</a><br />
     </p>
 
 <p><br>
