--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -55,7 +55,7 @@
 
     
 <p> <a href="../reference/ref-menu-source.htm">Source menu</a><br />
-  <a href="../reference/ref-wizard-externalize-strings.htm"">Externalize Strings 
+  <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings 
   wizard</a> </p>
 <p><a href="../reference/ref-preferences-compiler.htm">Compiler 
   preferences</a></p>
