--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
   <head>
     <title>Editing Java elements</title>
