More chkpii fixes

--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
@@ -116,7 +116,7 @@ Java Elements.
 The
 <a href="../reference/api/org/eclipse/compare/EditionSelectionDialog.html"><b>EditionSelectionDialog</b></a>
 requires that the editions implement the
-<a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b><a/>
+<a href="../reference/api/org/eclipse/compare/IStreamContentAccessor.html"><b>IStreamContentAccessor</b></a>
 and
 <a href="../reference/api/org/eclipse/compare/IModificationDate.html"><b>IModificationDate</b></a>
 interfaces.
