added alt attributes to img tags

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-44.htm
@@ -28,7 +28,8 @@ method of the locked class. You can tell this option is turned on if, after
 you select a method, the Hierarchy view's title bar indicates that the
 view is "Filtered".
 
-<p class="para"><img SRC="../images/tasks-8.gif" NOSAVE id="_x0000_i1025" height=188 width=267 alt=" ">
+<p class="para"><img SRC="../images/tasks-8.gif" NOSAVE id="_x0000_i1025" height=188 width=267
+alt="Hierarchy view in Filtered Subtypes mode">
 
 <p class="para">The methods of interest are shown in the upper pane. You
 can select any method and open it in an editor.</ol>
