--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-93.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-93.htm
@@ -12,7 +12,8 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 <p>
-<div CLASS="Figure"><img SRC="../images/tasks-29.gif" NOSAVE height=322 width=337 alt=" ">
+<div CLASS="Figure"><img SRC="../images/tasks-29.gif" NOSAVE height=322 width=337
+alt="Parameters page of the Rename Compilation Unit refactoring wizard">
 <p>
 <div CLASS="FigureTitle">Rename Compilation Unit Parameters Page</div>
 </div>
