--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -12,7 +12,8 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 <p>
-<div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=418 width=347 alt=" "> 
+<div CLASS="Figure"><img SRC="../images/tasks-32.gif" NOSAVE height=418 width=347
+alt="Parameters page of the Rename Method Parameters refactoring wizard"> 
   <div CLASS="FigureTitle">Parameters Page for the Rename Method Parameters
 Refactoring Command</div>
 </div>
