--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
@@ -17,7 +17,8 @@
 <p CLASS="Para">For example, type&nbsp;<span CLASS="Filename">TestCase&nbsp;</span>in
 the scrapbook editor and press Ctrl+Space. Code assist prompts you with
 possible completions.
-<div CLASS="Figure"><img SRC="../images/tasks-46.gif" height=182 width=381 alt=" ">
+<div CLASS="Figure"><img SRC="../images/tasks-46.gif" height=182 width=381
+alt="A Java editor with a content assist window at the caret position">
 <div CLASS="FigureTitle">Content Assist/Code Assist</div>
 </div>
 
