--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-95.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-95.htm
@@ -12,7 +12,8 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 <p>
-<div CLASS="Figure"><img SRC="../images/tasks-30.gif" NOSAVE height=317 width=340 alt=" ">
+<div CLASS="Figure"><img SRC="../images/tasks-30.gif" NOSAVE height=317 width=340
+alt="Parameters page of the Rename Type refactoring wizard">
 <p>
 <div CLASS="FigureTitle">Rename Type Parameters Page</div>
 </div>
