Formatting clean-up

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -23,12 +23,11 @@
      <a href="tips-9.htm">Java Project Classpath</a> <br>
      <a href="tips-10.htm">JUnit</a> <br>
      <a href="tips-11.htm">Miscellaneous</a> <br>
-     
-    <p>
+    
+	<p> 
       <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
-    </p>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+	</p>
   </body>
 </html>
 
