--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-12.htm
@@ -42,11 +42,10 @@
         Rename</strong> from the menu bar or pop-up menu.<br>
       </li>
     </ul>
-    <p>
+	<p>
       <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
-    </p>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+	</p>  
   </body>
 </html>
 
