--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-3.htm
@@ -12,9 +12,6 @@
     <h1>
       Hierarchy view
     </h1>
-    <p>
-      &nbsp;
-    </p>
     <ul>
       <li>
         You can open the Hierarchy view not only on types but also on packages, source folders, JARs and Java projects.
@@ -28,8 +25,7 @@
     </ul>
     <p>
       <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
