--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-5.htm
@@ -36,9 +36,6 @@
       </li>
     </ol>
     <p>
-      &nbsp;
-    </p>
-    <p>
       You can do global Find and Replace:
     </p>
     <ol>
@@ -49,8 +46,10 @@
         Right-click on an entry in the Search view and use the <strong>Replace</strong> or <strong>Replace Selected</strong> from the pop-up menu.
       </li>
     </ol>
-    &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14">
-    </a>
+	<p>
+	  <br>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+	</p>
   </body>
 </html>
 
