Formatting clean-up

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -33,7 +33,7 @@
       </li>
     </ul>
     <p>
-      If you&#39;re not familiar with the basic workbench mechanisms, please see the <span>Getting Started</span> chapter of the <span>Workbench User Guide</span>.
+      If you&#39;re not familiar with the basic workbench mechanisms, please see the Getting Started chapter of the Workbench User Guide.
     </p>
     <h2>
       Verifying JRE installation and classpath variables
@@ -43,21 +43,29 @@
         Open the workbench preferences by selecting the menu item Window &gt; Preferences.
       </li>
       <li>
-        Go to the <strong>Installed Java Runtime Environments</strong> preference page by selecting <span>Java &gt; Installed JREs</span> in the tree pane on the left. Confirm
+        Go to the <strong>Installed Java Runtime Environments</strong> preference page by selecting Java &gt; Installed JREs in the tree pane on the left. Confirm
         that a JRE has been detected. By default, the JRE used to run the workbench will be used to build and run Java programs. It should appear with a check mark in the list of
-        installed JREs. <img src="../images/qs-1.gif" alt="Installed JREs preference page">
+        installed JREs.
+		<br>
+		<img src="../images/qs-1.gif" alt="Installed JREs preference page">
       </li>
       <li>
         Go to the <strong>Workbench</strong> preference page by selecting <strong>Workbench</strong> in the tree pane. Confirm that the <strong>Perform build automatically on
-        resource modification</strong> option is checked. <img src="../images/qs-2.gif" alt="Workbench preference page">
+        resource modification</strong> option is checked.
+		<br>
+		<img src="../images/qs-2.gif" alt="Workbench preference page">
       </li>
       <li>
         Go to the <strong>New Project</strong> preference page by selecting <strong>New Project</strong> in the tree pane. Confirm that <strong>As source and output location
-        use</strong> is set to <strong>Project</strong>. <img src="../images/qs-3.gif" alt="New project preference page">
+        use</strong> is set to <strong>Project</strong>.
+		<br>
+		<img src="../images/qs-3.gif" alt="New project preference page">
       </li>
       <li>
         Go to the <strong>Java Editor</strong> preference page by selecting <strong>Java &gt; Editor</strong> in the tree pane. On the preference page, press the <strong>Problem
-        Indication</strong> tab. Confirm that all options are checked. <img src="../images/qs-17a.gif" alt="Java Editor preference page">
+        Indication</strong> tab. Confirm that all options are checked.
+		<br>
+		<img src="../images/qs-17a.gif" alt="Java Editor preference page">
       </li>
       <li>
         Leave the preferences by clicking on <strong>OK</strong>.
@@ -91,7 +99,6 @@
       <a href="../concepts/concepts-3.htm">Java projects</a><br>
        <a href="../concepts/cclsspthv.htm">Classpath variables</a><br>
        <a href="../concepts/cbuildcp.htm">Build classpath</a><br>
-      <br>
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks">
@@ -99,7 +106,6 @@
     <p>
       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-119.htm">Working with JREs</a><br>
-      <br>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference">
@@ -109,6 +115,7 @@
        <a href="../reference/ref-preferences-new-project.htm">New Project Preferences</a><br>
        <a href="../reference/ref-21.htm">Java Editor Preferences</a><br>
     </p>
+	<br>
     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
   </body>
 </html>
