--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -24,7 +24,9 @@
         On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. Then click <strong>Next</strong>. In
         the <strong>Project name</strong> field, type &quot;JUnit&quot;, then click <strong>Finish</strong>. A new Java perspective opens within the workbench with the new Java
         project in the Package Explorer. Along with the new Java perspective, new menu options and Java specific buttons are loaded in the workbench toolbar. Depending on which
-        view or editor is active, other buttons and menu options will be available. <img src="../images/qs-4.gif" alt="Java perspective">
+        view or editor is active, other buttons and menu options will be available.
+		<br>
+		<img src="../images/qs-4.gif" alt="Java perspective">
       </li>
       <li>
         In the Package Explorer, make sure that the JUnit project is selected. Select the menu item <strong>File &gt; Import...</strong>.
@@ -40,7 +42,9 @@
       <li>
         Below the import hierarchy list in the Import wizard, click the <strong>Select All</strong> button. You can expand and select elements within the <em>junit</em> directory
         on the left pane to view the individual resources that you are importing on the right pane. <em>Note: Do not deselect any of the resources in the</em> junit directory at
-        this time. You will need all of these resources in the tutorial.  <img src="../images/qs-5.gif" alt="Import hierarchy list">
+        this time. You will need all of these resources in the tutorial.
+		<br>
+		<img src="../images/qs-5.gif" alt="Import hierarchy list">
       </li>
       <li>
         Make sure that the JUnit project appears in the destination <strong>Folder</strong> field. Then click <strong>Finish</strong>. In the import progress indicator, notice
@@ -48,7 +52,9 @@
         option is checked on the Workbench preferences page.
       </li>
       <li>
-        In the Package Explorer view, expand the JUnit project to view the JUnit packages. <img src="../images/qs-6.gif" alt="Package explorer">
+        In the Package Explorer view, expand the JUnit project to view the JUnit packages.
+		<br>
+		<img src="../images/qs-6.gif" alt="Package explorer">
       </li>
     </ol>
     <p>
@@ -56,8 +62,7 @@
     </p>
     <p>
       <a href="../concepts/concepts-3.htm">Java projects</a><br>
-       <a href="../tasks/tasks-6.htm">Java views</a><br>
-      <br>
+      <a href="../tasks/tasks-6.htm">Java views</a><br>
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
@@ -74,6 +79,7 @@
       <a href="../reference/ref-121.htm">New Java Project Wizard</a><br>
        <a href="../reference/ref-view-package-explorer.htm">Package Explorer View</a><br>
     </p>
+	<br>
     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
   </body>
 </html>
